--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>My GitHub Pages Site</title>
+    <title>Will You Be My Valentine?</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello world 👋</h1>
-    <p>If you can see this, GitHub Pages is working.</p>
+    <div class="container">
+      <h1>Will You Be My Valentine? 💘</h1>
+
+      <!-- Replace src with your image or gif -->
+      <img
+        src="valentine.gif"
+        alt="Cute Valentine Gif"
+        class="main-image"
+      />
+
+      <div class="buttons">
+        <button id="yesBtn" onclick="goYes()">Yes 💖</button>
+        <button id="noBtn">No 😢</button>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
