--- a/yes.html
+++ b/yes.html
@@ -12,7 +12,7 @@
 
       <!-- Different image/gif here -->
       <img
-        src="celebrate.gif"
+        src="cat.webp"
         alt="Celebration Gif"
         class="main-image"
       />
