--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <!-- Replace src with your image or gif -->
       <img
-        src="valentine.gif"
+        src="cat.jpeg"
         alt="Cute Valentine Gif"
         class="main-image"
       />
