--- a/yes.html
+++ b/yes.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <h1>YAY!!! 💕</h1>
-      <p class="yay-text">See you February 14th 😉</p>
+      <p class="yay-text">See you February 14th 😊</p>
 
       <!-- Different image/gif here -->
       <img
